# Rust-Learning

./: .gitignore
Automated Tests/Definition/src/: lib.rs
Basic TCP Server/tcp_server/src/: NotFound.html  hello.html  lib.rs  main.rs
Collections/HashMap/src/: main.rs
Collections/Strings/src/: main.rs
Collections/Vectors/src/: main.rs
Collections/median_and_mode_calculator/: Cargo.toml
Collections/median_and_mode_calculator/src/: main.rs
Common Concepts/TempConverter/: Cargo.toml
Common Concepts/TempConverter/src/: main.rs
Common Concepts/data_types/src/: main.rs
Common Concepts/fibonacci/src/: main.rs
Common Concepts/guessing_game/src/: main.rs
Enums/definition/src/: main.rs
Errors/recoverable_errors/: users.txt
Errors/recoverable_errors/src/: main.rs
OwnerShip/Rules/src/: main.rs
OwnerShip/Slice/src/: main.rs
Struct/Definition/: Cargo.toml
Struct/Definition/src/: main.rs
Struct/MethodSyntax/: Cargo.toml
Struct/MethodSyntax/src/: main.rs
Struct/rectangles/src/: main.rs
Traits Generic Type and LifeTime/generic_type/src/: main.rs
Traits Generic Type and LifeTime/life_time/src/: main.rs
Traits Generic Type and LifeTime/traits/src/: lib.rs  main.rs
actix/: .env  Cargo.toml
actix/src/: lib.rs  main.rs
actix/src/api/: user.rs
actix/src/model/: user.rs
actix/src/repository/: user_repository.rs
auth_project/frontend/: package-lock.json  package.json  tailwind.config.js
auth_project/frontend/src/: App.tsx
functions/src/: main.rs
guessing_game/src/: main.rs
minigrep/src/: lib.rs  main.rs
(+10 files in other folders)
