[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "web_server"
path = "src/lib.rs"

[dependencies]
actix-web = "^4"
mongodb = "2"
dotenv = "0.15.0"
bson = "^2"
serde = "1.0"
env_logger = "0.11.0"
log = "0.4.14"